
Release 0.5

   o CHANGE: In CA display mode, only CAs can now be picked.

   o CHANGE: Nudge centre axes are not relative to the screen rather
     than in world coordinates.
 
   o CHANGE: ncs skipping changed.  Hopefully faster now.

   o CHANGE: default bond width changed to 5.

   o CHANGE: Traffic lights verticallized.
 
   o CHANGE: the argument order for "mutate" have been canonicalised.

   o BUG-FIX: Can now read SHELXL .ins files with lowercase symops.

   o BUG-FIX: chiral volumes are now correctly handled for multiple
     monomer bespoke ligand dictionaries.

Release 0.4.1 "Kendall^2"

   o BUG-FIX: Fix problem of key press with no map causing crash.

Release 0.4 "Kendall"

   o FEATURE: Kevin Cowtan has given us "Cootaneer" [slim-line
     side-chain-assigning Buccaneer for Coot]

   o FEATURE: Richardson Rotamers (instead of Dunbrack's) are used by
     default. Rotamers are named int the dialog (the probability
     limits are no longer meaninful) [Dirk Kostrewa]

   o FEATURE: New environment variable COOT_SCHEME_EXTRA_DIR introduced. If the 
     directory pointed to by COOT_SCHEME_EXTRA_DIR exists, then Coot
     will read all the .scm files in that directory

     :::: CORRECTION ::::
     That should be COOT_SCHEME_EXTRAS_DIR (note the extra "S").

   o FEATURE: Cis-peptide GUI added to extensions

   o FEATURE: Chiral volumes are added to the geometry target
     function. Check for chiral volume and cis-peptide errors introduced
     on refinement.  Add Chi-squared values to Accept/Reject dialog
     (along with traffic lights in the Gtk2 version)

   o FEATURE: Old backup-files cleaner-upper added

   o FEATURE: CCP4i aliases are also added to the Project Dir options in the
     file selector [Ingo Korndoerfer]

   o FEATURE: Multiple model ligand overlaying [Bob Nolte]

   o FEATURE: NCS matching (Kleywegt Plots) work using SHELXL molecules

   o FEATURE: Add "Laplacian" transform (the magnitude of the curvature)
     function for maps
